--- a/batteryGraph.html
+++ b/batteryGraph.html
@@ -56,7 +56,7 @@
                     slantedTextAngle: 35,
                     showTextEvery: 2
                 },
-                vAxis: { title: 'Luchtdruk (hPa)' },
+                vAxis: { title: 'Percent (%)' },
                 series: {
                     0: { color: '#12cc31' },  // External temperature
                 }
